--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-hello, world!
+<doctype html>
+<html>
+    <head>
+        <meta charset="utf-8">
+    </head>
+
+    <body>
+        <p>
+            Now,this page has nothing.<br><br>
+            Anyway,Welcome to <a href="https://github.com/robotkkk">my github page</a> <br><br>
+            also <a href="https://www.cnblogs.com/robotkkk/">the blog</a> <br><br>
+        </p>
+    </body> 
+</html>
