--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
 
     <body>
         <p>
-            Now,this page has nothing.<br><br>
-            Anyway,Welcome to <a href="https://github.com/robotkkk">my github page</a> <br><br>
-            also <a href="https://www.cnblogs.com/robotkkk/">the blog</a> <br><br>
+            wait...
         </p>
     </body> 
 </html>
